fix font cut off on search page

--- a/app/assets/stylesheets/apartments.css.scss
+++ b/app/assets/stylesheets/apartments.css.scss
@@ -41,7 +41,6 @@ select[name=sorting] {
 	overflow: auto;
 
 	.search-result {
-		min-height: 440px;
 		width: 300px;
 		float: left;
 		margin: 0px 10px 20px;
@@ -157,7 +156,7 @@ select[name=sorting] {
 			}
 		}
 		.listing-footer {
-			min-height: 100px;
+			min-height: 130px;
 			padding: 10px 0;
 			text-align: center;
 
